--- a/package.json
+++ b/package.json
@@ -1,21 +1,38 @@
 {
-  "name": "node-school-wallet-app",
-  "version": "1.0.0",
-  "description": "Приложение школы Node.js «Кошелёк»",
-  "author": "",
-  "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "ssh://git@github.com:rakchaev/node-school-app.git"
-  },
-  "license": "ISC",
-  "engines": {
-    "node": "^8.2"
-  },
-  "dependencies": {
-    "express": "^4.15.3"
-  }
+	"name": "ym-wallet-node-school",
+	"version": "1.0.0",
+	"description": "Приложение школы Node.js «Кошелёк»",
+	"author": "",
+	"scripts": {
+		"start": "NODE_PATH=. node ./app/app.js",
+		"watch": "NODE_PATH=. nodemon --watch source ./source/app.js",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+ssh://git@github.com/AwK55/yam-wallet.git"
+	},
+	"license": "ISC",
+	"engines": {
+		"node": "^8.2"
+	},
+	"bugs": {
+		"url": "https://github.com/AwK55/yam-wallet/issues"
+	},
+	"homepage": "https://github.com/AwK55/yam-wallet#readme",
+	"main": "index.js",
+	"directories": {
+		"test": "tests"
+	},
+	"devDependencies": {
+		"babel": "^6.23.0",
+		"babel-cli": "^6.26.0",
+		"webpack": "^3.6.0"
+	},
+	"dependencies": {
+		"koa": "^2.3.0",
+		"koa-bodyparser": "^4.2.0",
+		"koa-router": "^7.2.1",
+		"koa-static": "^4.0.1"
+	}
 }
