add client app configure webpack for ssr

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "Приложение школы Node.js «Кошелёк»",
 	"author": "",
 	"scripts": {
+		"build": "webpack",
 		"start": "NODE_PATH=. node ./app/app.js",
 		"watch": "NODE_PATH=. nodemon --watch source ./source/app.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
@@ -25,6 +26,35 @@
 		"test": "tests"
 	},
 	"devDependencies": {
+		"antd": "^2.13.4",
+		"babel-core": "^6.26.0",
+		"babel-loader": "^7.1.2",
+		"babel-plugin-emotion": "^7.1.0",
+		"babel-plugin-import": "^1.4.0",
+		"babel-polyfill": "^6.26.0",
+		"babel-preset-env": "^1.6.0",
+		"babel-preset-es2015": "^6.24.1",
+		"babel-preset-react": "^6.24.1",
+		"babel-preset-stage-0": "^6.24.1",
+		"card-info": "git+https://github.com/iniel/card-info.git",
+		"css-loader": "^0.28.7",
+		"emotion": "^7.2.0",
+		"eslint": "^4.7.0",
+		"eslint-plugin-import": "^2.7.0",
+		"eslint-plugin-jsx-a11y": "^5.1.1",
+		"eslint-plugin-react": "^7.3.0",
+		"extract-text-webpack-plugin": "^3.0.1",
+		"file-loader": "^1.1.4",
+		"ignore-loader": "^0.1.2",
+		"optimize-css-assets-webpack-plugin": "^3.2.0",
+		"postcss-loader": "^2.0.6",
+		"react": "^16.0.0",
+		"react-dom": "^16.0.0",
+		"react-emotion": "^7.2.0",
+		"serialize-javascript": "^1.4.0",
+		"style-loader": "^0.18.2",
+		"svg-sprite-loader": "^3.2.6",
+		"uglifyjs-webpack-plugin": "^0.4.6",
 		"babel": "^6.23.0",
 		"babel-cli": "^6.26.0",
 		"webpack": "^3.6.0"
