--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,7 @@
 {
-    //"plugins": ["node_school_wallet_app"]
+	"presets": ["env", "es2015", "react"],
+	"plugins": [
+		"emotion",
+		["import", {"libraryName": "antd", "style": "css"}]
+	]
 }
