--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"extract-text-webpack-plugin": "^3.0.1",
 		"file-loader": "^1.1.4",
 		"ignore-loader": "^0.1.2",
+		"jest": "^21.2.1",
 		"optimize-css-assets-webpack-plugin": "^3.2.0",
 		"postcss-loader": "^2.0.6",
 		"react": "^16.0.0",
