add pay, tranfer and fill oparations now routes in middlewares

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
 		"webpack": "^3.6.0"
 	},
 	"dependencies": {
+		"joi": "^13.0.0",
 		"koa": "^2.3.0",
 		"koa-bodyparser": "^4.2.0",
 		"koa-router": "^7.2.1",
