--- a/package.json
+++ b/package.json
@@ -1,72 +1,97 @@
 {
-	"name": "ym-wallet-node-school",
-	"version": "1.0.0",
-	"description": "Приложение школы Node.js «Кошелёк»",
-	"author": "",
-	"scripts": {
-		"build": "webpack",
-		"start": "NODE_PATH=. node ./app/app.js",
-		"watch": "NODE_PATH=. nodemon --watch source ./source/app.js",
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+ssh://git@github.com/AwK55/yam-wallet.git"
-	},
-	"license": "ISC",
-	"engines": {
-		"node": "^8.2"
-	},
-	"bugs": {
-		"url": "https://github.com/AwK55/yam-wallet/issues"
-	},
-	"homepage": "https://github.com/AwK55/yam-wallet#readme",
-	"main": "index.js",
-	"directories": {
-		"test": "tests"
-	},
-	"devDependencies": {
-		"antd": "^2.13.4",
-		"babel": "^6.23.0",
-		"babel-cli": "^6.26.0",
-		"babel-core": "^6.26.0",
-		"babel-loader": "^7.1.2",
-		"babel-plugin-emotion": "^7.1.0",
-		"babel-plugin-import": "^1.4.0",
-		"babel-polyfill": "^6.26.0",
-		"babel-preset-env": "^1.6.0",
-		"babel-preset-es2015": "^6.24.1",
-		"babel-preset-react": "^6.24.1",
-		"babel-preset-stage-0": "^6.24.1",
-		"card-info": "git+https://github.com/iniel/card-info.git",
-		"css-loader": "^0.28.7",
-		"emotion": "^7.2.0",
-		"eslint": "^4.7.0",
-		"eslint-plugin-import": "^2.7.0",
-		"eslint-plugin-jsx-a11y": "^5.1.1",
-		"eslint-plugin-react": "^7.3.0",
-		"extract-text-webpack-plugin": "^3.0.1",
-		"file-loader": "^1.1.4",
-		"ignore-loader": "^0.1.2",
-		"jest": "^21.2.1",
-		"optimize-css-assets-webpack-plugin": "^3.2.0",
-		"postcss-loader": "^2.0.6",
-		"react": "^16.0.0",
-		"react-dom": "^16.0.0",
-		"react-emotion": "^7.2.0",
-		"serialize-javascript": "^1.4.0",
-		"style-loader": "^0.18.2",
-		"svg-sprite-loader": "^3.2.6",
-		"uglifyjs-webpack-plugin": "^0.4.6",
-		"webpack": "^3.6.0"
-	},
-	"dependencies": {
-		"axios": "^0.16.2",
-		"joi": "^13.0.0",
-		"koa": "^2.3.0",
-		"koa-bodyparser": "^4.2.0",
-		"koa-router": "^7.2.1",
-		"koa-static": "^4.0.1",
-		"winston": "^3.0.0-rc0"
-	}
+  "name": "ym-wallet-node-school",
+  "version": "1.0.0",
+  "description": "Приложение школы Node.js «Кошелёк»",
+  "author": "",
+  "scripts": {
+    "build": "webpack",
+    "start": "NODE_PATH=. node ./index.js",
+    "watch": "NODE_PATH=. nodemon --watch  ./index.js",
+    "test": "mocha ./tests/app --recursive",
+    "test:client": "jest",
+    "test:client:watch": "jest --watch",
+    "test:client:coverage": "jest --coverage"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/AwK55/yam-wallet.git"
+  },
+  "license": "ISC",
+  "engines": {
+    "node": "^8.2"
+  },
+  "bugs": {
+    "url": "https://github.com/AwK55/yam-wallet/issues"
+  },
+  "homepage": "https://github.com/AwK55/yam-wallet#readme",
+  "main": "index.js",
+  "directories": {
+    "test": "./tests/app"
+  },
+  "jest": {
+    "testRegex": "./tests/client/",
+    "setupFiles": [
+      "./tests/jestsetup.js",
+      "./tests/shim.js"
+    ],
+    "snapshotSerializers": [
+      "<rootDir>/node_modules/enzyme-to-json/serializer"
+    ],
+    "moduleNameMapper": {
+      "^.+\\.(css|scss)$": "identity-obj-proxy"
+    }
+  },
+  "devDependencies": {
+    "antd": "^2.13.4",
+    "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-emotion": "^7.1.0",
+    "babel-plugin-import": "^1.4.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "card-info": "git+https://github.com/iniel/card-info.git",
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "css-loader": "^0.28.7",
+    "emotion": "^7.2.0",
+    "enzyme": "^3.1.0",
+    "enzyme-adapter-react-16": "^1.0.2",
+    "enzyme-to-json": "^3.1.4",
+    "eslint": "^4.7.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.3.0",
+    "extract-text-webpack-plugin": "^3.0.1",
+    "file-loader": "^1.1.4",
+    "identity-obj-proxy": "^3.0.0",
+    "ignore-loader": "^0.1.2",
+    "jest": "^21.2.1",
+    "mocha": "^4.0.1",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "postcss-loader": "^2.0.6",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-emotion": "^7.2.0",
+    "serialize-javascript": "^1.4.0",
+    "sinon": "^4.0.1",
+    "style-loader": "^0.18.2",
+    "supertest": "^3.0.0",
+    "svg-sprite-loader": "^3.2.6",
+    "uglifyjs-webpack-plugin": "^0.4.6",
+    "webpack": "^3.6.0"
+  },
+  "dependencies": {
+    "axios": "^0.16.2",
+    "joi": "^13.0.0",
+    "koa": "^2.3.0",
+    "koa-bodyparser": "^4.2.0",
+    "koa-router": "^7.2.1",
+    "koa-static": "^4.0.1",
+    "winston": "^3.0.0-rc0"
+  }
 }
