--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
 		"koa-bodyparser": "^4.2.0",
 		"koa-router": "^7.2.1",
 		"koa-static": "^4.0.1",
+		"mongoose": "^4.12.4",
+		"mongoose-auto-increment": "^5.0.1",
 		"winston": "^3.0.0-rc0"
 	}
 }
