--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ Thumbs.db
 *.log
 npm-debug.log*
 .vscode
-public/*
+public/
 !public/assets/
 !public/fonts/
 !public/favicon.ico
@@ -18,3 +18,5 @@ package-lock.json
 logs/
 
 
+app/views/index-server.js
+tests/**/*.snap
